--- a/ssd300_training.ipynb
+++ b/ssd300_training.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.optimizers import Adam, SGD\n",
     "from keras.callbacks import ModelCheckpoint, LearningRateScheduler, TerminateOnNaN, CSVLogger\n",
@@ -70,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_height = 300 # Height of the model input images\n",
@@ -129,10 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 1: Build the Keras model.\n",
@@ -157,7 +161,7 @@
     "# 2: Load some weights into the model.\n",
     "\n",
     "# TODO: Set the path to the weights you want to load.\n",
-    "weights_path = 'path/to/VGG_ILSVRC_16_layers_fc_reduced.h5'\n",
+    "weights_path = 'VGG_ILSVRC_16_layers_fc_reduced.h5'\n",
     "\n",
     "model.load_weights(weights_path, by_name=True)\n",
     "\n",
@@ -745,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.5"
   },
   "widgets": {
    "state": {},
